[project]
name = "bilibili-bot"
version = "1.0.0"
description = "Bilibili comment bot that auto-replies with AI-generated video summaries"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "openai>=1.50",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]
